layout issues - added food pics

--- a/styles/main.css
+++ b/styles/main.css
@@ -113,7 +113,7 @@ nav li a{
     box-shadow: 3px 3px 5px var(--shadow);
 }
 nav li a:hover{
-       background-color: var(--shadow);
+    background-color: var(--shadow);
     color: var(--formbackground);
     
 }
@@ -122,14 +122,34 @@ nav li a:visited{
 }
 
 /*body styles*/
-main{
+.index{
     width: var(--mainwidth);
     gap: 20px;
     margin: auto;
     margin-top: 30px;
     display: grid;
     grid-template-columns: 1fr 3fr;
+    grid-auto-rows: auto;
+    grid-template-areas: 
+    /*help*/
+    "pickup menu menu"
+    "pickup menu menu"
+    "pickup menu menu"
+    "partyform foodpic foodpic";
 }
+
+#pickup{
+    grid-area: pickup;
+}
+
+.partyForm{
+    grid-area: partyform
+}
+
+.menu{
+    grid-area: menu;
+}
+
 
 h2{
     background-color: var(--darkbg);
@@ -140,8 +160,32 @@ h2{
     margin: auto;
 }
 
-#forms{
-    width: 30vw;
+/*room rules exclusive*/
+.partyRulesBody{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    width: 75vw;
+    margin: auto;
+}
+
+.partyRulesBody ol{
+    padding: 25px;
+}
+
+.partyRulesBody li{
+    margin: 10px;
+}
+
+
+
+
+
+
+/*form styling*/
+.forms{
+    width: 28vw;
+    margin: auto;
+    margin-bottom: 30px;
 }
 
 form{
@@ -186,12 +230,15 @@ form input[type=checkbox]:hover{
     box-shadow: 1px 1px 3px var(--shadow);
 }
 
-
-
 form label input{
     background-color: var(--darkbglighttext);
     border-radius: var(--borrad);
     border: 1px solid var(--shadow);
+}
+
+/*not what I was looking for*/
+form label input:active form label input:focus{
+    border-color: var(--shadow);
 }
 
 label[name="rulesCheck"]{
@@ -201,6 +248,16 @@ label[name="rulesCheck"]{
 label{
     display: block;
     margin: 20px;
+}
+
+.forms h2{
+   margin-top: -3vh; 
+}
+
+/*contact exclusive form styling*/
+.contact form{
+    width: 50vw;
+    margin: auto;
 }
 
 /*table styles*/
@@ -248,6 +305,24 @@ table span{
     font-style: italic;
 }
 
+/*image styling*/
+.foodPic {
+    grid-area: foodpic;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-bottom: 50px;
+    margin-top: -250px;
+}
+
+.foodPic img{
+    width: 15vw;
+    height: 15vh;
+    
+}
+
+/*footer styling*/
 footer{
     width: 100%;
     text-align: center;
